fixing logout button on recs

--- a/public/recs.html
+++ b/public/recs.html
@@ -61,7 +61,11 @@
           <li class="nav-item">
             <a class="nav-link" href="home.html">My Watchlist</a>
           </li>
-          <li class="nav-item"><button id="logout">Logout</button></li>
+          <script>
+            localStorage.getItem("movieAppToken")?document.write('<li class="nav-item"><button id="logout">Logout</button></li>'):document.write('<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>')
+          </script>
+
+          
         </ul>
       </div>
     </nav>
