--- a/public/recs.html
+++ b/public/recs.html
@@ -61,9 +61,9 @@
           <li class="nav-item">
             <a class="nav-link" href="home.html">My Watchlist</a>
           </li>
-          <script>
+          <!-- <script>
             localStorage.getItem("movieAppToken")?document.write('<li class="nav-item"><button id="logout">Logout</button></li>'):document.write('<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>')
-          </script>
+          </script> -->
 
           
         </ul>
