comment out logout butt

--- a/public/recs.html
+++ b/public/recs.html
@@ -166,15 +166,15 @@
 
   <br />
   <script>
-    const logoutButton = document.getElementById("logout");
+    // const logoutButton = document.getElementById("logout");
 
-    logoutButton.addEventListener("click", () => {
-      window.localStorage.removeItem("movieAppToken");
-      watchListDiv.innerHTML = "Logging you out...";
-      setTimeout(function () {
-        window.location.href = "/login.html";
-      }, 1000);
-    });
+    // logoutButton.addEventListener("click", () => {
+    //   window.localStorage.removeItem("movieAppToken");
+    //   watchListDiv.innerHTML = "Logging you out...";
+    //   setTimeout(function () {
+    //     window.location.href = "/login.html";
+    //   }, 1000);
+    // });
 
     const searchForm = document.getElementById("search-form");
 
