--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="box.css" />
-    <style type="text/css">
+    <!-- <style type="text/css">
 
         *:focus {outline:none !important}
         .container-form {
@@ -53,7 +53,7 @@
             background-color: #aaa;
         }
         A {text-decoration: none;}
-        </style>
+        </style> -->
   </head>
 
   <body style="text-align: center">
@@ -85,9 +85,8 @@
     <script src="nav.js"></script>
 
     <div class="container-form">
+      <img class="big-logo" src="assets/logo.png" />
       <h1>Login</h1>
-
-      <!-- <img class="big-logo" src="assets/logo.png" /> -->
       <form id="loginForm">
         <br />
         <input
