--- a/public/register.html
+++ b/public/register.html
@@ -7,7 +7,9 @@
     <link rel="icon" href="assets/logo.png" />
     <link rel="stylesheet" type="text/css" href="general.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <style type="text/css">
+    <link rel="stylesheet" type="text/css" href="box.css" />
+
+    <!-- <style type="text/css">
 
     *:focus {outline:none !important}
     .container-form {
@@ -51,7 +53,7 @@
         background-color: #aaa;
     }
     A {text-decoration: none;}
-    </style>
+    </style> -->
   </head>
   <body style="text-align: center">
     <header id="navbar">
@@ -76,7 +78,8 @@
       </nav>
     </header>
     <script src="nav.js"></script>
-    
+    <img class="big-logo" src="assets/logo.png" />
+
     <h1>Register</h1>
     <div class="container-form">
     <form id="registerForm">
