--- a/public/recs.html
+++ b/public/recs.html
@@ -86,6 +86,7 @@
       </div>
     </nav>
   </header>
+  <script src="nav.js"></script>
 
   <script language="javascript">
     const moodTitles = [
