--- a/public/recs.html
+++ b/public/recs.html
@@ -175,7 +175,7 @@
     </div>
     <div id="watchListDiv" style="display: hidden"></div>
 
-    <h2 class="movieDisplay">Recommendations</h2>
+    <div class="movieDisplay" id="displayHeading"></div>
     <div class="movieDisplay">
       <script>
         var s = "";
