mobile friendly recs

--- a/public/home.html
+++ b/public/home.html
@@ -39,7 +39,7 @@
     </header>
     <script src="nav.js"></script>
     <br />
-    <h1>Home</h1>
+    <h1>Your Watchlist</h1>
     <br />
     <div id="watchListDiv" class="movieDisplay"></div>
     <br />
