--- a/public/recs.html
+++ b/public/recs.html
@@ -13,11 +13,19 @@
 
   <style type="text/css">
     @media screen and (max-width: 1100px) {
-      .search-container {
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 20px 10px 20px 10px;
+      .search-container input,
+      select,
+      #personSearch,
+      #moodDrop {
+        width: auto;
+      }
+    }
+
+    @media screen and (max-width: 850px) {
+      .search-container,
+      .movieDisplay {
+        padding: 10px 0px 10px 0px;
+        width: 100%;
       }
 
       .search-form {
@@ -26,24 +34,13 @@
       }
 
       .search-container input,
-      select {
-        border-radius: 15px;
-        background-color: #fff;
-        height: 40px;
-        font-size: 16px;
-        padding: 5px;
-        border: none;
-        width: 300px;
-        align-self: center;
-      }
-
-      select:hover {
-        cursor: pointer;
-      }
-
+      select,
       #personSearch,
       #moodDrop {
-        width: 300px;
+        height: auto;
+        font-size: 18px;
+        align-self: center;
+        margin: 0;
       }
     }
   </style>
