styling + tmdb credit

--- a/public/home.html
+++ b/public/home.html
@@ -38,19 +38,12 @@
       </div>
     </nav>
   </header>
-
   <script src="nav.js"></script>
   
   <br />
-  <h1>Your Watchlist</h1>
-  <br />
+  <div  class="movieDisplay" id="displayHeading"></div>
   <div id="watchListDiv" class="movieDisplay"></div>
   <br />
-
-  <footer>
-
-  </footer>
-
   <script src="home.js"></script>
 </body>
 
