--- a/public/recs.html
+++ b/public/recs.html
@@ -13,6 +13,7 @@
 
   <style type="text/css">
     @media screen and (max-width: 1100px) {
+
       .search-container input,
       select,
       #personSearch,
@@ -22,6 +23,7 @@
     }
 
     @media screen and (max-width: 850px) {
+
       .search-container,
       .movieDisplay {
         padding: 10px 0px 10px 0px;
@@ -42,6 +44,20 @@
         align-self: center;
         margin: 0;
       }
+    }
+
+    footer {
+      background-color: #000;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: #fff;
+    }
+
+    footer img {
+      padding-bottom: 20px;
     }
   </style>
 
@@ -105,9 +121,9 @@
 
               logoutButton.addEventListener("click", () => {
                 window.localStorage.removeItem("movieAppToken");
-                watchListDiv.classList.remove("movieDisplay");
-                watchListDiv.style.color = "white";
-                watchListDiv.innerHTML = "Logging you out...";
+                //watchListDiv.classList.remove("movieDisplay");
+                result.style.color = "white";
+                result.innerHTML = "Logging you out...";
                 setTimeout(function () {
                   window.location.href = "/login.html";
                 }, 1000);
@@ -202,7 +218,7 @@
       <input type="submit" id="search" value="Search" />
     </form>
   </div>
-  <div id="watchListDiv" style="display: hidden"></div>
+  <div id="result" style="display: hidden"></div>
 
   <div class="movieDisplay" id="displayHeading"></div>
   <div class="movieDisplay">
@@ -215,8 +231,15 @@
       }
     </script>
   </div>
-
   <br />
+
+  <footer>
+    <a href="https://www.themoviedb.org/documentation/api?language=en-US">
+      <img class="db-logo" src="assets/tmdb.svg" style="height: 70px;">
+    </a>
+    <div>Made possible by The Movie Database API</div>
+  </footer>
+
   <script>
     const searchForm = document.getElementById("search-form");
 
@@ -234,12 +257,8 @@
         }
       } else if (typeSelected == person) {
         searched = document.getElementById("personSearch").value;
-        //form validation
-        if (searched == "") {
-          alert("Please enter an actor's name for your search");
-        } else {
-          searchPerson(searched);
-        }
+        if (searched == "") { alert("Please enter an actor's name for your search"); }
+        else { searchPerson(searched); }
       }
     });
   </script>
