--- a/public/login.html
+++ b/public/login.html
@@ -127,7 +127,7 @@
       const res = await rawRes.json();
       if (rawRes.status == 200) {
         result.innerHTML =
-          "Successfully logged in! Directing you to the home page";
+          "Successfully logged in! Directing you to your watchlist";
         console.log(res);
         window.localStorage.setItem("movieAppToken", res.token);
         setTimeout(function () {
