deleted logo-db class

--- a/public/home.html
+++ b/public/home.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nextwatch: Home</title>
+    <link rel="icon" href="assets/logo.png" />
+    <link rel="stylesheet" type="text/css" href="general.css" />
+    <link rel="stylesheet" type="text/css" href="movie.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nextwatch: Home</title>
-  <link rel="icon" href="assets/logo.png" />
-  <link rel="stylesheet" type="text/css" href="general.css" />
-  <link rel="stylesheet" type="text/css" href="movie.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-</head>
+  <body style="text-align: center">
+    <header id="navbar">
+      <nav class="nav-wrapper container">
+        <a href="recs.html" class="home-link">
+          <img id="logo" src="assets/logo.png" />
+          nextwatch
+        </a>
 
-<body style="text-align: center">
-  <header id="navbar">
-    <nav class="nav-wrapper container">
-      <a href="recs.html" class="home-link">
-        <img id="logo" src="assets/logo.png" />
-        nextwatch
+        <button type="button" class="nav-toggle">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li class="nav-item">
+              <a class="nav-link" href="recs.html">Recommendations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">My Watchlist</a>
+            </li>
+            <li class="nav-item"><button id="logout">Logout</button></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <script src="nav.js"></script>
+
+    <br />
+    <div class="movieDisplay" id="displayHeading"></div>
+    <div id="watchListDiv" class="movieDisplay"></div>
+    <br />
+    <footer>
+      <a href="https://www.themoviedb.org/documentation/api?language=en-US">
+        <img src="assets/tmdb.svg" style="height: 70px" />
       </a>
-
-      <button type="button" class="nav-toggle">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-      <div class="nav-menu">
-        <ul class="nav-links">
-          <li class="nav-item">
-            <a class="nav-link" href="recs.html">Recommendations</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="home.html">My Watchlist</a>
-          </li>
-          <li class="nav-item"><button id="logout">Logout</button></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <script src="nav.js"></script>
-  
-  <br />
-  <div  class="movieDisplay" id="displayHeading"></div>
-  <div id="watchListDiv" class="movieDisplay"></div>
-  <br />
-  <script src="home.js"></script>
-</body>
-
+      <div>Made possible by The Movie Database API</div>
+    </footer>
+    <script src="home.js"></script>
+  </body>
 </html>
