--- a/public/recs.html
+++ b/public/recs.html
@@ -1,267 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nextwatch - Recommendations</title>
+    <link rel="icon" href="assets/logo.png" />
+    <link rel="stylesheet" type="text/css" href="general.css" />
+    <link rel="stylesheet" type="text/css" href="movie.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="recs.js"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nextwatch - Recommendations</title>
-  <link rel="icon" href="assets/logo.png" />
-  <link rel="stylesheet" type="text/css" href="general.css" />
-  <link rel="stylesheet" type="text/css" href="movie.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="recs.js"></script>
-
-  <style type="text/css">
-    @media screen and (max-width: 1100px) {
-
-      .search-container input,
-      select,
-      #personSearch,
-      #moodDrop {
-        width: auto;
-      }
-    }
-
-    @media screen and (max-width: 850px) {
-
-      .search-container,
-      .movieDisplay {
-        padding: 10px 0px 10px 0px;
-        width: 100%;
+    <style type="text/css">
+      @media screen and (max-width: 1100px) {
+        .search-container input,
+        select,
+        #personSearch,
+        #moodDrop {
+          width: auto;
+        }
       }
 
-      .search-form {
-        justify-content: center;
+      @media screen and (max-width: 850px) {
+        .search-container,
+        .movieDisplay {
+          padding: 10px 0px 10px 0px;
+          width: 100%;
+        }
+
+        .search-form {
+          justify-content: center;
+          flex-direction: column;
+        }
+
+        .search-container input,
+        select,
+        #personSearch,
+        #moodDrop {
+          height: auto;
+          font-size: 18px;
+          align-self: center;
+          margin: 0;
+        }
+      }
+
+      footer {
+        background-color: #000;
+        display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        color: #fff;
       }
 
-      .search-container input,
-      select,
-      #personSearch,
-      #moodDrop {
-        height: auto;
-        font-size: 18px;
-        align-self: center;
-        margin: 0;
+      footer img {
+        padding-bottom: 20px;
       }
-    }
+    </style>
 
-    footer {
-      background-color: #000;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      color: #fff;
-    }
-
-    footer img {
-      padding-bottom: 20px;
-    }
-  </style>
-
-  <script>
-    const mood = 0;
-    const person = 1;
-
-    $(document).ready(function () {
-      $("#searchType").change(function () {
-        var selected = $("#searchType")[0].selectedIndex;
-        if (selected == mood) {
-          $("#personSearch").hide();
-          $("#moodDrop").show();
-        } else if (selected == person) {
-          $("#moodDrop").hide();
-          $("#personSearch").show();
-        }
-      });
-
-      $(".movieBlock").hover(
-        function () {
-          $(this).addClass("interested");
-        },
-        function () {
-          $(this).removeClass("interested");
-        }
-      );
-    });
-  </script>
-</head>
-
-<body style="text-align: center">
-  <header id="navbar">
-    <nav class="nav-wrapper container">
-      <a href="recs.html" class="home-link">
-        <img id="logo" src="assets/logo.png" />
-        nextwatch
-      </a>
-
-      <button type="button" class="nav-toggle">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-      <div class="nav-menu">
-        <ul class="nav-links">
-          <li class="nav-item">
-            <a class="nav-link" href="recs.html">Recommendations</a>
-          </li>
-
-          <script>
-            if (localStorage.getItem("movieAppToken")) {
-              document.write(
-                '<li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>'
-              );
-              document.write(
-                '<li class="nav-item"><button id="logout">Logout</button></li>'
-              );
-              const logoutButton = document.getElementById("logout");
-
-              logoutButton.addEventListener("click", () => {
-                window.localStorage.removeItem("movieAppToken");
-                //watchListDiv.classList.remove("movieDisplay");
-                result.style.color = "white";
-                result.innerHTML = "Logging you out...";
-                setTimeout(function () {
-                  window.location.href = "/login.html";
-                }, 1000);
-              });
-            } else {
-              document.write(
-                '<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>'
-              );
-            }
-          </script>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <script src="nav.js"></script>
-
-  <script language="javascript">
-    const moodTitles = [
-      "Adventure from the Couch",
-      "Family Movie Night",
-      "Date Night",
-      "Out of this World",
-      "Bust out the Tissues",
-      "When You Need to Laugh",
-    ];
-
-    const subMoods = [
-      //    ["Action", "Adventure", "Western", "Science Fiction", "Mystery"],
-      ["Action", "Adventure"],
-      ["Family", "Fantasy", "Animation"],
-      ["Romantic", "Comedy"],
-      ["Fantasy", "Science Fiction"],
-      ["Drama", "Romance"],
-      ["Comedy"],
-    ];
-
-    let url =
-      "https://api.themoviedb.org/3/genre/movie/list?api_key=9aadfff8aa707747cec36dc03dfe8b0f&language=en-US";
-    var genresList = fetch(url)
-      .then((results) => results.json())
-      .then((data) => {
-        var genres = data.genres;
-        setMoods(genres);
-      });
-
-    function Mood(title, subgenres) {
-      this.title = title;
-      this.subgenres = subgenres;
-    }
-
-    var moods = [];
-    function setMoods(allGenres) {
-      var subG, newMood;
-      var subID = [];
-      for (i = 0; i < moodTitles.length; i++) {
-        subG = subMoods[i];
-        for (j = 0; j < subG.length; j++) {
-          for (k = 0; k < allGenres.length; k++) {
-            if (subG[j] == allGenres[k].name) {
-              subID.push(allGenres[k].id);
-            }
-          }
-          subMoods[i] = subID;
-          newMood = new Mood(moodTitles[i], subID);
-          moods.push(newMood);
-          subID = [];
-        }
-      }
-    }
-  </script>
-
-  <div class="search-container">
-    <form class="search-form" id="search-form">
-      <select id="searchType">
-        <option value="mood">Mood</option>
-        <option value="person">Actor/Actress</option>
-      </select>
-      <br />
-      <input type="text" id="personSearch" style="display: none"
-        placeholder="Enter the name of an actor/actress here" />
-      <script language="javascript">
-        var selectString = "<select id='moodDrop'>";
-        selectString +=
-          "<option value='' selected hidden>Select a mood below</option>";
-        for (i = 0; i < moodTitles.length; i++) {
-          selectString += "<option>" + moodTitles[i] + "</option>";
-        }
-        selectString += "</select>";
-        document.writeln(selectString);
-      </script>
-      <br />
-      <input type="submit" id="search" value="Search" />
-    </form>
-  </div>
-  <div id="result" style="display: hidden"></div>
-
-  <div class="movieDisplay" id="displayHeading"></div>
-  <div class="movieDisplay">
     <script>
-      var s = "";
-      for (i = 0; i < 20; i++) {
-        s = '<div class="movieBlock" id="top' + i + '"></div>';
-        document.write(s);
-        s = "";
+      const mood = 0;
+      const person = 1;
+
+      $(document).ready(function () {
+        $("#searchType").change(function () {
+          var selected = $("#searchType")[0].selectedIndex;
+          if (selected == mood) {
+            $("#personSearch").hide();
+            $("#moodDrop").show();
+          } else if (selected == person) {
+            $("#moodDrop").hide();
+            $("#personSearch").show();
+          }
+        });
+
+        $(".movieBlock").hover(
+          function () {
+            $(this).addClass("interested");
+          },
+          function () {
+            $(this).removeClass("interested");
+          }
+        );
+      });
+    </script>
+  </head>
+
+  <body style="text-align: center">
+    <header id="navbar">
+      <nav class="nav-wrapper container">
+        <a href="recs.html" class="home-link">
+          <img id="logo" src="assets/logo.png" />
+          nextwatch
+        </a>
+
+        <button type="button" class="nav-toggle">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li class="nav-item">
+              <a class="nav-link" href="recs.html">Recommendations</a>
+            </li>
+
+            <script>
+              if (localStorage.getItem("movieAppToken")) {
+                document.write(
+                  '<li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>'
+                );
+                document.write(
+                  '<li class="nav-item"><button id="logout">Logout</button></li>'
+                );
+                const logoutButton = document.getElementById("logout");
+
+                logoutButton.addEventListener("click", () => {
+                  window.localStorage.removeItem("movieAppToken");
+                  //watchListDiv.classList.remove("movieDisplay");
+                  result.style.color = "white";
+                  result.innerHTML = "Logging you out...";
+                  setTimeout(function () {
+                    window.location.href = "/login.html";
+                  }, 1000);
+                });
+              } else {
+                document.write(
+                  '<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>'
+                );
+              }
+            </script>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <script src="nav.js"></script>
+
+    <script language="javascript">
+      const moodTitles = [
+        "Adventure from the Couch",
+        "Family Movie Night",
+        "Date Night",
+        "Out of this World",
+        "Bust out the Tissues",
+        "When You Need to Laugh",
+      ];
+
+      const subMoods = [
+        //    ["Action", "Adventure", "Western", "Science Fiction", "Mystery"],
+        ["Action", "Adventure"],
+        ["Family", "Fantasy", "Animation"],
+        ["Romantic", "Comedy"],
+        ["Fantasy", "Science Fiction"],
+        ["Drama", "Romance"],
+        ["Comedy"],
+      ];
+
+      let url =
+        "https://api.themoviedb.org/3/genre/movie/list?api_key=9aadfff8aa707747cec36dc03dfe8b0f&language=en-US";
+      var genresList = fetch(url)
+        .then((results) => results.json())
+        .then((data) => {
+          var genres = data.genres;
+          setMoods(genres);
+        });
+
+      function Mood(title, subgenres) {
+        this.title = title;
+        this.subgenres = subgenres;
+      }
+
+      var moods = [];
+      function setMoods(allGenres) {
+        var subG, newMood;
+        var subID = [];
+        for (i = 0; i < moodTitles.length; i++) {
+          subG = subMoods[i];
+          for (j = 0; j < subG.length; j++) {
+            for (k = 0; k < allGenres.length; k++) {
+              if (subG[j] == allGenres[k].name) {
+                subID.push(allGenres[k].id);
+              }
+            }
+            subMoods[i] = subID;
+            newMood = new Mood(moodTitles[i], subID);
+            moods.push(newMood);
+            subID = [];
+          }
+        }
       }
     </script>
-  </div>
-  <br />
 
-  <footer>
-    <a href="https://www.themoviedb.org/documentation/api?language=en-US">
-      <img class="db-logo" src="assets/tmdb.svg" style="height: 70px;">
-    </a>
-    <div>Made possible by The Movie Database API</div>
-  </footer>
+    <div class="search-container">
+      <form class="search-form" id="search-form">
+        <select id="searchType">
+          <option value="mood">Mood</option>
+          <option value="person">Actor/Actress</option>
+        </select>
+        <br />
+        <input
+          type="text"
+          id="personSearch"
+          style="display: none"
+          placeholder="Enter the name of an actor/actress here"
+        />
+        <script language="javascript">
+          var selectString = "<select id='moodDrop'>";
+          selectString +=
+            "<option value='' selected hidden>Select a mood below</option>";
+          for (i = 0; i < moodTitles.length; i++) {
+            selectString += "<option>" + moodTitles[i] + "</option>";
+          }
+          selectString += "</select>";
+          document.writeln(selectString);
+        </script>
+        <br />
+        <input type="submit" id="search" value="Search" />
+      </form>
+    </div>
+    <div id="result" style="display: hidden"></div>
 
-  <script>
-    const searchForm = document.getElementById("search-form");
-
-    searchForm.addEventListener("submit", (e) => {
-      e.preventDefault();
-      searchType = document.getElementById("searchType");
-      typeSelected = searchType.selectedIndex;
-
-      if (typeSelected == mood) {
-        var selectedMood = document.getElementById("moodDrop").selectedIndex;
-        if (selectedMood <= 0) {
-          alert("Please choose a mood from the dropdown menu");
-        } else {
-          searchMood(selectedMood - 1);
+    <div class="movieDisplay" id="displayHeading"></div>
+    <div class="movieDisplay">
+      <script>
+        var s = "";
+        for (i = 0; i < 20; i++) {
+          s = '<div class="movieBlock" id="top' + i + '"></div>';
+          document.write(s);
+          s = "";
         }
-      } else if (typeSelected == person) {
-        searched = document.getElementById("personSearch").value;
-        if (searched == "") { alert("Please enter an actor's name for your search"); }
-        else { searchPerson(searched); }
-      }
-    });
-  </script>
-</body>
+      </script>
+    </div>
+    <br />
 
+    <footer>
+      <a href="https://www.themoviedb.org/documentation/api?language=en-US">
+        <img src="assets/tmdb.svg" style="height: 70px" />
+      </a>
+      <div>Made possible by The Movie Database API</div>
+    </footer>
+
+    <script>
+      const searchForm = document.getElementById("search-form");
+
+      searchForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        searchType = document.getElementById("searchType");
+        typeSelected = searchType.selectedIndex;
+
+        if (typeSelected == mood) {
+          var selectedMood = document.getElementById("moodDrop").selectedIndex;
+          if (selectedMood <= 0) {
+            alert("Please choose a mood from the dropdown menu");
+          } else {
+            searchMood(selectedMood - 1);
+          }
+        } else if (typeSelected == person) {
+          searched = document.getElementById("personSearch").value;
+          if (searched == "") {
+            alert("Please enter an actor's name for your search");
+          } else {
+            searchPerson(searched);
+          }
+        }
+      });
+    </script>
+  </body>
 </html>
