--- a/public/home.html
+++ b/public/home.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" type="text/css" href="movie.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
+  <style>
+    footer {
+      background-color: #000;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: #fff;
+    }
+
+    footer img {
+      padding-bottom: 20px;
+    }
+  </style>
 
   <body style="text-align: center">
     <header id="navbar">
