--- a/public/login.html
+++ b/public/login.html
@@ -7,54 +7,9 @@
   <title>Login</title>
   <link rel="icon" href="assets/logo.png" />
   <link rel="stylesheet" type="text/css" href="general.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-
   <link rel="stylesheet" type="text/css" href="box.css" />
-  <!-- <style type="text/css">
 
-        *:focus {outline:none !important}
-        .container-form {
-            width: 300px;
-            clear: both;
-            padding-left: 1.4rem;
-            padding-right: 1.4rem;
-            margin-left: auto;
-            margin-right: auto;
-            color: #ffffff;
-            padding-bottom: 30px;
-        }
-    
-        .container-form input {
-            width: 100%;
-            clear: both;
-        }
-        .rounded-input {
-            padding: 5px;
-            border-radius: 20px;
-            border: 1px solid rgb(19, 18, 18);
-            transition: .3s border-color;
-        }
-        .rounded-input:hover {
-            border: 1px solid #aaa;
-        }
-        .login-updated-button {
-        /* remove default behavior */
-            appearance:none;
-            -webkit-appearance:none;
-        /* usual styles */
-            padding:10px;   
-            border:none;
-            background-color:#3F51B5;
-            color:#fff;
-            font-weight:600;
-            border-radius:5px;
-            width:10%; 
-        }
-        .login-updated-button:hover {
-            background-color: #aaa;
-        }
-        A {text-decoration: none;}
-        </style> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
 <body style="text-align: center">
@@ -87,7 +42,7 @@
 
   <div class="container-form">
     <img class="big-logo" src="assets/logo.png" />
-    <h1>Login</h1>
+    <h1 class="box-heading">Login</h1>
     <form id="loginForm">
       <br />
       <input placeholder="email" type="text" id="email" name="email" class="rounded-input" required />
